[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-game-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-mcp>=0.2.3",
    "pydantic>=2.11.7",
]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["chuk_mcp_game_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"

[tool.isort]
profile = "black"
multi_line_output = 3
